[package]
name = "mdbook-kroki-preprocessor"
version = "0.3.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
description = "render kroki diagrams from files or code blocks in mdbook"
edition = "2021"
keywords = ["mdbook", "proprocessor", "kroki", "diagram"]
readme = "README.md"
repository = "https://github.com/JoelCourtney/mdbook-kroki-preprocessor"
license-file = "LICENSE"

[lib]  # 新增库配置
name = "boilerplate"
path = "src/boilerplate.rs"

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
pulldown-cmark = { version = "0.9.2", default-features = false }
reqwest = { version = "0.11.16", features = ["blocking"] }
sscanf = "0.4.0"
xmltree = "0.10.3"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
semver = "1.0.17"
clap = { version = "2.34.0", default-features = false }
mdbook = { version = "=0.4.36", default-features = false }
tokio = { version = "1.27.0", default-features = false, features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
tokio-test = "0.4.2"