[package]
name = "mdbook-echarts"
version = "0.0.4"
authors = ["Zhuang Biaowei"]
edition = "2018"
description = "A preprocessor and cli tool for mdbook to show chart use echarts.js."
license = "MIT"
documentation = "https://crates.io/crates/mdbook-echarts"
homepage = "https://crates.io/crates/mdbook-echarts"
repository = "https://github.com/zhuangbiaowei/mdbook-echarts"
readme = "README.md"
keywords = ["mdbook", "markdown", "chart", "Echarts"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
tungstenite = "0.17.2"
mdbook = "=0.4.36"
anyhow = "1.0.32"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.57"
regex = "1"
svgbob = "0.7.6"
log = "0.4.17"
env_logger = "0.11.1"
libc = "0.2.161"
uuid = { version = "0.8", features = ["serde", "v4"] }

[build-dependencies]
cc = "1.1.36"    # 用于编译 C 代码
