[package]
name = "mdbook-svgbob"
version = "0.2.2"
authors = ["Alex Koz. <a@koz.email>"]
description = "SvgBob mdbook preprocessor which swaps code-blocks with neat SVG."
homepage = "https://nest.pijul.com/fzzr/mdbook-svgbob"
repository = "https://github.com/boozook/mdbook-svgbob.git"
keywords = ["mdbook", "markdown", "ascii", "svg", "bob"]
categories = ["command-line-utilities", "text-processing", "visualization"]
edition = "2021"
readme = "README.md"
license = "LICENSE"

[dependencies]
svgbob = "0.7.6"
uuid = { version = "0.8", features = ["serde", "v4"] }

